fixing navbar section

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <div class="container_nav">
         <nav class="navbar">
             <div class="links">
-                <a href="/index.html#services" class="active">Our services</a>
-                <a href="/index.html#top-cars">Top Cars</a>
-                <a href="/index.html#renting">Renting</a>
+                <a href="/index.html#topCars" class="active">Top Cars</a>
+                <a href="/index.html#services">Our services</a>
+                <a href="/search-page.html">Renting</a>
+                <a href="/index.html#aboutUs">about us</a>
                 <a href="/index.html#contact">Contact</a>
             </div>
             <div class="btns">
@@ -117,7 +118,7 @@
     <!-- NAVBAR -->
 
     <!-- TOP CARS SECTION -->
-    <div class="carousel">
+    <div class="carousel" id="topCars">
         <div class="list"><!--added dynamically--></div>
         <div class="arrows">
             <div class="arrows_content">
@@ -195,7 +196,7 @@
 
 
 
-    <div class="section-header">
+    <div class="section-header" id="services">
         <h2>We offer best services</h2>
     </div>
 
@@ -222,7 +223,8 @@
             <p>Protect your rental with flexible insurance coverage</p>
         </div>
     </div>
-    <div class="section-header">
+    
+    <div class="section-header" id="aboutUs">
         <h2>What People Say About Us</h2>
     </div>
     <div class="test">
