--- a/search-page.html
+++ b/search-page.html
@@ -18,9 +18,10 @@
 <div class="container_nav">
     <nav class="navbar">
         <div class="links">
-            <a href="/index.html#services" class="active">Our services</a>
-            <a href="/index.html#top-cars">Top Cars</a>
-            <a href="/index.html#renting">Renting</a>
+            <a href="/index.html#topCars">Top Cars</a>
+            <a href="/index.html#services">Our services</a>
+            <a href="/search-page.html" class="active">Renting</a>
+            <a href="/index.html#aboutUs">about us</a>
             <a href="/index.html#contact">Contact</a>
         </div>
         <div class="btns">
@@ -100,7 +101,7 @@
         <div class="whishlit_list">
             <!--add items dynamically-->
         </div>
-
+        
 
         <div class="checkout">
             <a href="#"><i class="uil uil-credit-card"></i> Checkout</a>
@@ -109,7 +110,6 @@
     </div>
 </aside>
 <!--WISHLIST ASIDEBAR-->
-
 <!-- NAVBAR -->
 
 
