--- a/signin.html
+++ b/signin.html
@@ -17,13 +17,15 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 <body>
+    
 <!-- NAVBAR -->
 <div class="container_nav">
     <nav class="navbar">
         <div class="links">
-            <a href="/index.html#services" class="active">Our services</a>
-            <a href="/index.html#top-cars">Top Cars</a>
-            <a href="/index.html#renting">Renting</a>
+            <a href="/index.html#topCars" class="active">Top Cars</a>
+            <a href="/index.html#services">Our services</a>
+            <a href="/search-page.html">Renting</a>
+            <a href="/index.html#aboutUs">about us</a>
             <a href="/index.html#contact">Contact</a>
         </div>
         <div class="btns">
@@ -86,6 +88,34 @@
         </div>
     </div>
 </div>
+
+<!--WISHLIST ASIDEBAR-->
+<div class="overlay" id="overlay"></div>
+<aside class="sidebar">
+    <div class="link_container">
+
+        <div class="menu_inside">
+            <div class="menu_btn" id="menuBtn2">
+                <i class="uil uil-multiply"></i> Wishlist
+            </div>
+        </div>
+
+        <h4 class="section_title">Your Cars</h4>
+
+        <div class="whishlit_list">
+            <!--add items dynamically-->
+        </div>
+        
+
+        <div class="checkout">
+            <a href="#"><i class="uil uil-credit-card"></i> Checkout</a>
+        </div>
+
+    </div>
+</aside>
+<!--WISHLIST ASIDEBAR-->
+<!-- NAVBAR -->
+
 
 <!--WISHLIST ASIDEBAR-->
 <div class="overlay" id="overlay"></div>
