--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,7 @@
 <div class="container_nav">
     <nav class="navbar">
         <div class="links">
-            <a href="/index.html#topCars" class="active">Top Cars</a>
+            <a href="/index.html#topCars">Top Cars</a>
             <a href="/index.html#services">Our services</a>
             <a href="/search-page.html">Renting</a>
             <a href="/index.html#aboutUs">about us</a>
@@ -114,35 +114,6 @@
     </div>
 </aside>
 <!--WISHLIST ASIDEBAR-->
-<!-- NAVBAR -->
-
-
-<!--WISHLIST ASIDEBAR-->
-<div class="overlay" id="overlay"></div>
-<aside class="sidebar">
-    <div class="link_container">
-
-        <div class="menu_inside">
-            <div class="menu_btn" id="menuBtn2">
-                <i class="uil uil-multiply"></i> Wishlist
-            </div>
-        </div>
-
-        <h4 class="section_title">Your Cars</h4>
-
-        <div class="whishlit_list">
-            <!--add items dynamically-->
-        </div>
-
-
-        <div class="checkout">
-            <a href="#"><i class="uil uil-credit-card"></i> Checkout</a>
-        </div>
-
-    </div>
-</aside>
-<!--WISHLIST ASIDEBAR-->
-
 <!-- NAVBAR -->
 
 
