--- a/car-details.html
+++ b/car-details.html
@@ -15,7 +15,7 @@
 <div class="container_nav">
     <nav class="navbar">
         <div class="links">
-            <a href="/index.html#topCars" class="active">Top Cars</a>
+            <a href="/index.html#topCars">Top Cars</a>
             <a href="/index.html#services">Our services</a>
             <a href="/search-page.html">Renting</a>
             <a href="/index.html#aboutUs">about us</a>
