adjusted car_spec

--- a/site-web-location-de-voitures/car-details.html
+++ b/site-web-location-de-voitures/car-details.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rent Porsche 911 - CarbyMy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/car-details.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -73,26 +74,26 @@
                 <img src="assets/images/cars/Porshe-911-GT3-RS/img_1.webp">
                 <div id="right">> </div>
             </div>
-            <div class="characteristic">
+            <!-- <div class="characteristic">
                 <p>The "Elegant", A masterpiece of aerodynamics and power.<br>
                     The GT3 RS offers an unfiltered connection to the road for the most demanding drivers.</p>
-            </div>
+            </div> -->
             <div class="car_specs">
                 <div class="spec-item">
-                    <i class="fa-solid fa-gauge-high fa-3x"></i>
-                    <p>296 km/h</p>
-                </div>
-                <div class="spec-item">
-                    <i class="fa-solid fa-stopwatch fa-3x"></i>
-                    <p>3.2s 0-100</p>
-                </div>
-                <div class="spec-item">
                     <i class="fa-solid fa-gas-pump fa-3x"></i>
-                    <p>Essence</p>
+                    <p>63 L</p>
                 </div>
                 <div class="spec-item">
-                    <i class="fa-solid fa-gears fa-3x"></i>
-                    <p>Automatic<br>Gearbox</p>
+                    <img src="./assets/icons/car-door.png" alt="">
+                    <p>2 Doors</p>
+                </div>
+                <div class="spec-item">
+                    <i class="fa-solid fa-user-group fa-3x"></i>
+                    <p>2 Seats</p>
+                </div>
+                <div class="spec-item">
+                    <i class="fa-solid fa-car-side fa-3x"></i>
+                    <p>Coupe</p>
                 </div>
             </div>
         </div>
