--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
         </div>
     </div>
     <!-- FOOTER -->
-
-    <script src="js/contact.js"></script>
+    <script  src="js/emailService.js"></script>
+    <script type="module" src="js/contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script src="js/mobile-navbar.js"></script>  
     <script src="js/navbar_links.js"></script>  
