--- a/car-details.html
+++ b/car-details.html
@@ -63,9 +63,10 @@
 
     <div class="mobile-menu">
         <div class="mobile-menu-content">
-            <a href="/index.html#services" class="active">Our services</a>
-            <a href="/index.html#top-cars">Top Cars</a>
-            <a href="/index.html#renting">Renting</a>
+            <a href="/index.html#topCars">Top Cars</a>
+            <a href="/index.html#services">Our services</a>
+            <a href="/search-page.html">Renting</a>
+            <a href="/index.html#aboutUs">about us</a>
             <a href="/index.html#contact">Contact</a>
 
             <div class="mobile-btns">
@@ -218,6 +219,7 @@
     <script src="js/mobile-navbar.js"></script>
     <script src="js/navbar_links.js"></script>
     <script src="js/car-details.js"></script>
+    <script type="module" src="js/whishlist.js"></script>
     <script type="module" src="js/navbar-login.js"></script>
 
 </body>
