--- a/search-page.html
+++ b/search-page.html
@@ -66,9 +66,10 @@
 
     <div class="mobile-menu">
         <div class="mobile-menu-content">
-            <a href="/index.html#services" class="active">Our services</a>
-            <a href="/index.html#top-cars">Top Cars</a>
-            <a href="/index.html#renting">Renting</a>
+            <a href="/index.html#topCars">Top Cars</a>
+            <a href="/index.html#services">Our services</a>
+            <a href="/search-page.html">Renting</a>
+            <a href="/index.html#aboutUs">about us</a>
             <a href="/index.html#contact">Contact</a>
 
             <div class="mobile-btns">
