Add images slider (back) for Porsche 911 only

--- a/car-details.html
+++ b/car-details.html
@@ -126,9 +126,9 @@
                 <h2 id="carName">BMW 3</h2>
             </div>
             <div class="image">
-
+                <div id="left"><</div>
                 <img id="carImage" >
-
+                <div id="right">></div>
             </div>
             <!-- <div class="characteristic">
                 <p>The "Elegant", A masterpiece of aerodynamics and power.<br>
